--- a/homework4/style.css
+++ b/homework4/style.css
@@ -334,8 +334,10 @@
       
     }
     .footer-margin{
-      margin-left: 450px;
+      margin-left: 440px;
+      margin-top: 70px;
+
     }
     .margin-l{
-      margin-left: 40px;
+      margin-left: 490px;
     }
